--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_maps2">MapsActivity2</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="menu_maps">Maps</string>
 </resources>
